--- a/src/main/resources/fxml/DocMoverView.fxml
+++ b/src/main/resources/fxml/DocMoverView.fxml
@@ -27,11 +27,11 @@
 
 	<Label text="File Name" GridPane.rowIndex="1"
 		GridPane.columnIndex="0" />
-	<TextField fx:id="dtgTF" alignment="CENTER_RIGHT" promptText="DTG" prefWidth="60"
+	<TextField fx:id="dtgTF" alignment="CENTER_RIGHT" promptText="DTG" prefWidth="80"
 		GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.hgrow="NEVER" />
 	<Label text="-" GridPane.rowIndex="1" GridPane.columnIndex="2" />
 	<TextField fx:id="senderTF" alignment="CENTER_RIGHT"
-		promptText="Sender" GridPane.rowIndex="1" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS"/>
+		promptText="Sender" prefWidth="150" GridPane.rowIndex="1" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS"/>
 	<Label text="-" GridPane.rowIndex="1" GridPane.columnIndex="4" />
 	<TextField fx:id="nameTF" alignment="CENTER_RIGHT"
 		promptText="Name" GridPane.rowIndex="1" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS"/>
@@ -39,7 +39,7 @@
 	<TextField fx:id="extensionTF" alignment="CENTER_RIGHT" prefWidth="60"
 		promptText="Ext" GridPane.rowIndex="1" GridPane.columnIndex="7"  GridPane.hgrow="NEVER"/>
 
-	<Button fx:id="moveBtn" mnemonicParsing="false" onAction="#onLoginButtonPressed"
+	<Button fx:id="moveBtn" mnemonicParsing="false" onAction="#onMoveButtonPressed"
 		text="MOVE" textAlignment="CENTER" GridPane.rowIndex="3"
 		GridPane.columnIndex="0" GridPane.columnSpan="8" GridPane.halignment="CENTER"/>
 </GridPane>
