--- a/src/main/resources/fxml/PreferencesDlg.fxml
+++ b/src/main/resources/fxml/PreferencesDlg.fxml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Box?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ListView?>
 
-<GridPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	hgap="5" vgap="5">
+<BorderPane xmlns:fx="http://javafx.com/fxml" stylesheets="styles/styles.css"
+	fx:controller="be.vds.documentmover.controllers.PreferencesController" styleClass="mainLayout">
+	<center>
+		<GridPane hgap="5" vgap="5" styleClass="rounded">
+			<BorderPane.margin>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+			</BorderPane.margin>
+			<Label text="Source Folder" GridPane.columnIndex="0"
+				GridPane.rowIndex="0" />
+			<TextField fx:id="srcFolderTf" GridPane.columnIndex="1"
+				GridPane.rowIndex="0" GridPane.hgrow="ALWAYS" GridPane.vgrow="NEVER" />
 
+			<Label text="Dest Folder" GridPane.columnIndex="0"
+				GridPane.rowIndex="1" />
+			<TextField fx:id="destFolderTf" GridPane.columnIndex="1"
+				GridPane.rowIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="NEVER" />
+			<!-- <Box GridPane.columnIndex="0" GridPane.rowIndex="2" -->
+			<!-- GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" /> -->
+			
+			<Label text="Sender" GridPane.columnIndex="0"
+				GridPane.rowIndex="2" />
+			<ListView fx:id="senderList" GridPane.columnIndex="1"
+				GridPane.rowIndex="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+			
+		</GridPane>
+	</center>
 
-	<Label text="Source Folder" GridPane.rowIndex="0"
-		GridPane.columnIndex="0" />
-	<TextField fx:id="sourceFolderTF" alignment="BOTTOM_RIGHT"
-		promptText="folder" GridPane.rowIndex="0" GridPane.columnIndex="1" />
-
-
-	<Label text="Destination Folder" GridPane.rowIndex="1"
-		GridPane.columnIndex="0" />
-	<TextField fx:id="destinationFolderTF" alignment="BOTTOM_RIGHT"
-		promptText="folder" GridPane.rowIndex="1" GridPane.columnIndex="1" />
-
-
-	<GridPane GridPane.rowIndex="2" GridPane.columnIndex="0"
-		GridPane.columnSpan="2">
-		<Box GridPane.rowIndex="0" GridPane.columnIndex="0"
-			GridPane.hgrow="ALWAYS" />
-
-		<Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onMoveSavePressed"
-			text="Save" textAlignment="CENTER" GridPane.rowIndex="3"
-			GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.halignment="CENTER" />
-
-		<Button fx:id="cancelBtn" mnemonicParsing="false"
-			onAction="#onCancelButtonPressed" text="Cancel" textAlignment="CENTER"
-			GridPane.rowIndex="3" GridPane.columnIndex="2" GridPane.hgrow="NEVER"
-			GridPane.halignment="CENTER" />
-	</GridPane>
-
-
-</GridPane>
+	<bottom>
+		<HBox id="HBox" alignment="CENTER_RIGHT" spacing="5.0">
+			<Button mnemonicParsing="false" text="Save" onAction="#onSavePreferences" />
+			<Button mnemonicParsing="false" text="Cancel" onAction="#onCancel" />
+		</HBox>
+	</bottom>
+</BorderPane>
